fixed spacing glitches.

--- a/style.css
+++ b/style.css
@@ -2,14 +2,24 @@
     width: 100%; height: 100%; background: green; padding: 4em;
 }
 
-.card {
+.slot, .card {
     width: 10em; height: 14em;
-    margin: 1.25em; position: relative; float: left;
-    border-radius: .625em; background: white; border: solid black 2px;
-    font-size: medium;
 }
 
-.card-chosen { font-size: large; }
+.slot { 
+    margin: 1.25em;
+    position: relative; display: inline-block;
+}
+
+.card {
+    margin-left: -5em; margin-right: -5em;
+    margin-top: -7em; margin-bottom: -7em;
+    position: relative; top: 50%; left: 50%;
+    border-radius: .625em; background: white; border: solid black 2px;
+    font-size: small;
+}
+
+.slot, .card-chosen { font-size: medium; }
 
 .dot {
     width: 2.5em; height: 2.5em; 
